[gd_scene load_steps=19 format=3 uid="uid://6iy3u53ssy04"]

[ext_resource type="Script" path="res://nanogames/neo_highway/main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://0wlarpvgohpd" path="res://nanogames/neo_highway/driver/driver.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://hng1jifu5gsq" path="res://nanogames/neo_highway/_assets/obstacle.png" id="3"]
[ext_resource type="Texture2D" uid="uid://btpa2cpiol2n6" path="res://nanogames/neo_highway/_assets/warning.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dmfpb434166b0" path="res://nanogames/neo_highway/_assets/enemy.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dfmsnwfjusdgw" path="res://nanogames/neo_highway/_assets/background.png" id="6"]
[ext_resource type="Shader" path="res://shaders/texture_scroll.gdshader" id="7"]
[ext_resource type="AudioStream" uid="uid://chw2bs7gfrhtb" path="res://nanogames/neo_highway/_assets/music.ogg" id="8"]
[ext_resource type="AudioStream" uid="uid://br0nhe8j4qu0o" path="res://nanogames/neo_highway/_assets/crash.wav" id="9"]
[ext_resource type="AudioStream" uid="uid://dwweaid3pnoxv" path="res://nanogames/neo_highway/_assets/vroom.wav" id="10"]
[ext_resource type="AudioStream" uid="uid://36t565l7n0xe" path="res://nanogames/neo_highway/_assets/alarm.wav" id="11"]

[sub_resource type="SegmentShape2D" id="1"]
a = Vector2(0, -50)
b = Vector2(0, 50)

[sub_resource type="ShaderMaterial" id="2"]
shader = ExtResource("7")
shader_parameter/direction_speed = Vector2(-1, 0)
shader_parameter/offset_x = 0.0
shader_parameter/offset_y = 0.0

[sub_resource type="ShaderMaterial" id="3"]
shader = ExtResource("7")
shader_parameter/direction_speed = Vector2(-6, 0)
shader_parameter/offset_x = 0.0
shader_parameter/offset_y = 0.0

[sub_resource type="Animation" id="6"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CrashHitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Foreground/Enemy:self_modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Foreground/CrashVisual:color:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="4"]
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Foreground/CrashVisual:color:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CrashNoise")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="5"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CrashHitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Foreground/Enemy:self_modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 0.0]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CrashHitbox/Vroom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1b5gd"]
_data = {
"RESET": SubResource("6"),
"crash": SubResource("4"),
"enemy_move": SubResource("5")
}

[node name="Main" type="Node2D"]
texture_filter = 1
script = ExtResource("1")
metadata/_edit_lock_ = true

[node name="Driver" parent="." instance=ExtResource("2")]
position = Vector2(480, 360)

[node name="CrashHitbox" type="Area2D" parent="."]
position = Vector2(480, 0)
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CrashHitbox"]
shape = SubResource("1")
disabled = true

[node name="Vroom" type="AudioStreamPlayer2D" parent="CrashHitbox"]
bus = &"Effects"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(480, 360)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8")
autoplay = true
bus = &"Music"

[node name="CrashNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9")
bus = &"Effects"

[node name="Scenery" type="CanvasLayer" parent="."]
layer = -1

[node name="Background" type="TextureRect" parent="Scenery"]
texture_filter = 1
material = SubResource("2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -720.0
offset_bottom = -540.0
scale = Vector2(4, 4)
texture = ExtResource("6")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="TopObstacle" type="TextureRect" parent="Scenery"]
visible = false
texture_filter = 1
material = SubResource("3")
anchors_preset = 10
anchor_right = 1.0
offset_right = -720.0
offset_bottom = 32.0
scale = Vector2(4, 4)
texture = ExtResource("3")
stretch_mode = 1

[node name="BottomObstacle" type="TextureRect" parent="Scenery"]
visible = false
texture_filter = 1
material = SubResource("3")
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = -720.0
offset_bottom = -96.0
scale = Vector2(4, 4)
texture = ExtResource("3")
stretch_mode = 1
flip_v = true

[node name="Foreground" type="CanvasLayer" parent="."]

[node name="Enemy" type="TextureRect" parent="Foreground"]
self_modulate = Color(1, 1, 1, 0)
texture_filter = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 3.05176e-05
offset_right = -720.0
offset_bottom = 25.0
scale = Vector2(4, 4)
pivot_offset = Vector2(0, 17)
texture = ExtResource("5")
stretch_mode = 1

[node name="WarningAnchor" type="Control" parent="Foreground"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0

[node name="WarningTexture" type="TextureRect" parent="Foreground/WarningAnchor"]
unique_name_in_owner = true
visible = false
texture_filter = 1
layout_mode = 0
offset_right = 35.0
offset_bottom = 25.0
scale = Vector2(4, 4)
pivot_offset = Vector2(0, 16)
texture = ExtResource("4")
flip_h = true

[node name="Alarm" type="AudioStreamPlayer2D" parent="Foreground/WarningAnchor"]
scale = Vector2(4, 4)
stream = ExtResource("11")
bus = &"Effects"

[node name="CrashVisual" type="ColorRect" parent="Foreground"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 0)
metadata/_edit_lock_ = true

[node name="EnemySpawn" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_1b5gd")
}

[connection signal="hit" from="Driver" to="." method="_on_driver_hit"]
[connection signal="timeout" from="EnemySpawn" to="." method="_on_enemy_spawn_timeout"]
